--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dan Durkin | Digital Product Manager</title>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
     <div class="header-container row">
-      <div class="header-content small-10 small-offset-1 medium-8 medium-offset-2 large-4 large-offset-4 columns">
+      <div class="header-content small-10 small-offset-1 medium-8 medium-offset-2 large-8 large-offset-2 columns">
         <h1>Dan Durkin</h1>
-        <p class="intro-text">Product manager based in New York City. </p>
+        <p class="intro-text">Product manager based in New York City. This site is a work in progress.</p>
         <div class="button-group">
           <a href="https://twitter.com/ddurkin" class="hollow button">Follow</a>
           <a href="https://www.linkedin.com/in/danielhdurkin" class="hollow button">Connect</a>
